# DeepCode-Insight

./: .env.template  Makefile  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  ROADMAP.md  cli.py  debug_ast_structure.py  debug_test.py  demo_ast_parser.py  demo_static_analyzer.py  docker-compose.yml  final_refactoring_verification.py  final_verification.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_test.py  test_refactored_analyzers.py  test_report.html  test_static_analysis_comprehensive.py  test_static_analyzer.py  test_tree_sitter_queries.py
agents/: __init__.py  static_analyzer.py
analysis_reports/: report_demo_analysis_20250525_211144.md  report_test_local_20250525_212103.md  report_test_workflow_20250526_013630.md
deepcode_insight/: DIAGRAM_GENERATOR_TESTS_SUMMARY.md  __init__.py  config.py  debug_java_simple.py  demo_java_showcase.py  run_diagram_tests.py  test_java_integration.py
docs/: ENVIRONMENT_SETUP_SUMMARY.md  JAVA_INTEGRATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  RAG_IMPLEMENTATION_SUMMARY.md  README_RAG.md  README_SETUP.md  REFACTOR_SUMMARY.md  setup_api_keys.md
scripts/: create_env.py  quick_start.py  setup_env.py
src/: __init__.py  graph.py  state.py
tests/: __init__.py  debug_bare_except.py  debug_java_catch.py  demo_rag_context.py  final_java_integration_summary.py  run_all_tests.py  run_rag_tests.py  test_ast_parser.py  test_ast_parser_extended.py  test_ast_parser_real_world.py  test_cli.py  test_cli_edge_cases.py  test_cli_performance.py  test_code_fetcher.py  test_code_fetcher_advanced.py  (+15 more)
(+92 files in other folders)
