[tool.poetry]
name = "deepcode-insight"
version = "1.0.0"
description = "AI-Powered Code Analysis Tool using LangGraph workflow"
authors = ["DeepCode-Insight Team <team@deepcode-insight.com>"]
readme = "deepcode_insight/docs/README.md"
packages = [{include = "deepcode_insight"}]

[tool.poetry.scripts]
deepcode-insight = "deepcode_insight.cli.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langgraph = ">=0.4.7,<0.5.0"
langchain = ">=0.3.25,<0.4.0"
langchain-openai = ">=0.3.18,<0.4.0"
click = "^8.0.0"
gitpython = "^3.1.40"
tree-sitter = "^0.24.0"
tree-sitter-python = "^0.23.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
